LPS-120579 Fix author avatar alignment

--- a/modules/apps/portal-workflow/portal-workflow-task-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/portal-workflow/portal-workflow-task-web/src/main/resources/META-INF/resources/css/main.scss
@@ -309,6 +309,11 @@
 	.metadata-author {
 		font-weight: bold;
 		margin-right: 10px;
+
+		img,
+		svg {
+			vertical-align: baseline;
+		}
 	}
 
 	.metadata-entry {
